--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile(name: 'vidai-release-1.0.2', ext: 'aar')
+    //compile(name: 'vidai-release-1.0.2', ext: 'aar')
+    compile 'com.tyroo:vidai:1.0.4'
     //debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
     //releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
