--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,14 +10,14 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
         release {
             minifyEnabled true
-            shrinkResources true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -30,6 +30,7 @@ allprojects {
         flatDir {
             dirs 'libs'
         }
+        google()
     }
 }
 
@@ -40,9 +41,14 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.android.support:cardview-v7:25.3.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
     //compile(name: 'vidai-release-1.0.2', ext: 'aar')
-    compile 'com.tyroo:vidai:1.0.4'
+    compile 'com.tyroo:vidai:1.0.6'
     //debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
     //releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+
 }
